--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular-resource": "1.5.8",
     "angular": "1.5.8",
     "bootstrap": "3.3.7",
-    "angular-route": "1.5.8"
-    }
+    "angular-route": "1.5.8",
+    "angular-sanitize": "^1.5.8"
+  }
 }
