--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "angular": "1.5.8",
     "bootstrap": "3.3.7",
     "angular-route": "1.5.8",
-    "angular-sanitize": "^1.5.8"
+    "angular-sanitize": "^1.5.8",
+    "angular-lazy-img": "^1.2.2"
   }
 }
