--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "bootstrap": "3.3.7",
     "angular-route": "1.5.8",
     "angular-sanitize": "^1.5.8",
-    "angular-lazy-img": "^1.2.2"
+    "angular-lazy-img": "^1.2.2",
+    "angular-signature": "^1.0.0"
   }
 }
